--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
 	<li><a href="our-works-video.html" target="_blank">Видео</a></li>
 	<li><a href="articles.html" target="_blank">Статьи</a></li>
 	<li><a href="article.html" target="_blank">Статья</a></li>
+	<li><a href="news.html" target="_blank">Новости</a></li>
 </ol>
 
 </body>
