--- a/app/new.html
+++ b/app/new.html
@@ -11,7 +11,7 @@
 
 <meta name="robots" content="noindex,nofollow" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Новости</title>
+<title>Новость</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/template/css/jquery.bxslider.css" />
 <link rel="stylesheet" href="/template/css/styles.min.css" />
@@ -106,117 +106,62 @@
 		<div class="breadcrumbs">
 			<ul class="B_crumbBox">
 				<li class="B_crumb"><a href="/" title="" class="B_crumb">главная</a></li>
-				<li class="B_lastCrumb"><span class="B_currentCrumb">новости</span></li>
+				<li class="B_crumb"><a href="/" title="" class="B_crumb">новости</a></li>
+				<li class="B_lastCrumb"><span class="B_currentCrumb">abb оснастит первое «анти-круизное» судно из коллекции яхт сети ritz carlton</span></li>
 			</ul>
 		</div>
 		<!-- =/breadcrumbs -->
-		
+	
+
 
 		<main class="text">
-			<h1 class="title">Новостная лента компании</h1>
-			<p>Достаточно часто у домовладельцев, которые не являются профессиональными электриками, возникают вопросы, касающиеся использования такого энергоресурса как электричество. Вот и вынуждены они искать ответы на вопросы по электрике в самых разнообразных источниках, успешно функционирующих во всемирной сети Интернет. Но, невзирая на большое разнообразие строительно-информационных ресурсов и ресурсов, посвященных сугубо электротехнике, очень часто поиски ответов заканчиваются неудачей.</p>
+			<h1 class="title">abb оснастит первое «анти-круизное» судно из коллекции яхт сети ritz carlton</h1>
+
+			<p>АBB поставит движители и систему питания для головного передового судна под маркой The Ritz Carlton Yacht Collection.</p>
+			<p>190-метровое судно названо «анти-круизным», поскольку, в отличии от больших круизных судов, его вместимость составляет всего 298 пассажиров, и оно предназначено для предоставления услуг по индивидуальному заказу.</p>
+			 <br>
+
+			<p>Судно оснащено инновационным оборудованием ABB, которое позволяет эффективно расходовать энергию и дистанционно контролировать работу всех систем. Две колонки типа Azipod® D улучшают маневренность судна, а удаленная диагностика позволяет определить необходимый объем технического обслуживания.</p>
+
+			<br>
+
+			<a href="images/ship.jpg" class="fancybox"><img src="images/ship.jpg" alt=""></a>
+
+			<br> <br>
+
+			<p>Юха Коскела, руководитель направления ABB Морские суда и порты говорит: «Мы работаем в круизной индустрии около 30 лет. В течение последних 10 лет наши усилия направлены на создание удобной и надежной глобальной сети обслуживания Заказчиков, число которых постоянно растет. Сегодня наши технологии привлекают внимание новых партнеров. Мы готовы предложить высококачественное обслуживание как крупнейших круизных судов, так и роскошных яхт по всему миру».</p><br>
+
+
+			<p>Движитель типа Azipod D идеально подходит для малых судов, так как не требует больших энергозатрат. Колонки Azipod востребованы и для пассажирских судов, поскольку отказ от традиционных валолиний позволяет сократить объем бортового оборудования и освободить пространство. Явное преимущество для судов данного типа – снижение уровня вибрации. Способность двигателей поворачиваться на 360 ̊ позволяет швартоваться без помощи буксира, что актуально для судов работающих в водах Новой Англии, Карибского и Средиземного моря. Первый движитель Azipod был выпущен 25 лет назад, затем система постоянно модернизировалась, сегодня время работы двигателя более 13 миллионов часов с ресурсом 99,8%.</p><br>
+
+
+			<p>Капитан Эрик Бредх, руководитель морских работ в яхт-клубе «The Ritz-Carlton Yacht Collection», говорит: «Когда мы начали проектирование роскошной круизной яхты марки «Ritz Carlton», мы решили выбирать оборудование и системы безопасности только надежных производителей. Очевиден был выбор пропульсивного и энергетического комплекса ABB. Мы верим, что продукция этой компании соответствует высоким стандартам качества и они останутся нашими основными партнерами на долгие годы».</p><br>
+
+
+			<p>Колонки Azipod, а также все элементы средневольтной силовой установки АВВ, будут оснащены датчиками для передачи данных, которые затем отслеживаются Заказчиком и в центре ABB Ability ™. Данный мониторинг позволяет определить необходимость технического обслуживания.
+			При выборе систем автоматизации ABB на раннем этапе проектирования упрощается ввод в эксплуатацию.</p><br>
+
+
+			<p>Благодаря ABB Ability™ System 800xA экипаж имеет возможность контролировать и регулировать интегрированную работу всех систем и оборудования. На отдельном экране отображается вся информация, необходимая для более эффективного и безопасного управления судном. <br>
+			Судно будет построено на верфи «HJ Astilleros Barreras (HJB)» в Испании и передано в эксплуатацию в 2019 году. Alfonso López Loureiro, директор по продажам HJB, говорит: «Это очень интересная концепция, и мы рады, что нашим партнером стала компания ABB, зарекомендовавшая себя как надежного поставщика оборудования для аналогичных и более крупных пассажирских судов».</p>
+			<br>
+
+			<p>Использование движителя Azipod приблизительно на 10% экономичнее традиционных валолиний, также снижаются эксплуатационные затраты и объем выбросов. Гидродинамику корпуса можно легко оптимизировать, поскольку не требуются рули или другое оборудование, связанное с валолинией. Конфигурация энергосистемы позволяет оптимизировать работу дизель-генераторной установки в зависимости от потребности судна.</p>
+			<br>
+
+			<p>АBB (код ABBN на Швейцарской бирже) — мировой лидер в области электрооборудования, робототехники и механизмов движения, промышленной автоматизации и электрических сетей. Компания работает с заказчиками в сферах электроэнергетики, промышленности, транспорта и инфраструктуры. АBB создает будущее промышленной цифровизации, способствуя развитию энергетической отрасли и продвижению Четвертой промышленной революции. Более 125 лет передового опыта позволяют АBB успешно вести бизнес более чем в 100 странах при общем числе сотрудников более 132 000 человек</p>
+			<br>
+			<p>---</p>
+			<br>
+			<p><em>Источник: <a href="#">АББ в России</a></em></p>
 		</main>
-
-		<div class="listnews">
-			<div class="flexbox">
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-15</time>
-						<h3 class="news__title">Новые контроллеры WAGO с поддержкой Profibus DP Master</h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-13</time>
-						<h3 class="news__title">Metra - система кабельных каналов и мини-каналов</h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-11</time>
-						<h3 class="news__title">ABB оснастит первое «анти-круизное» судно из коллекции яхт сети Ritz Carlton </h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-08</time>
-						<h3 class="news__title">Открытие продаж нового модуля IFM Modbus Interface - LV434000</h3>
-						<p><a href="new.html" title="">Серия PFC200 характеризуется компактным корпусом с широким набором сетевых ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-06</time>
-						<h3 class="news__title">ABB впервые проводит День инноваций и технологий </h3>
-						<p><a href="new.html" title="">День инноваций и технологий в ABB. Впервые компания ABB пригласила инвесторов, журналистов ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-04</time>
-						<h3 class="news__title">Программируемые логические контроллеры в программе поставок ПРОСОФТ</h3>
-						<p><a href="new.html" title="">Традиционный интерес аудитории вызывают презентации оборудования Advantech. Не последнюю ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-09-01</time>
-						<h3 class="news__title">Источники питания WAGO EPSITRON в двухфазной и трехфазной версиях</h3>
-						<p><a href="new.html" title="">В дополнение к своим проверенным однофазным источникам питания серии EPSITRON, компания WAGO ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-30</time>
-						<h3 class="news__title">Новые аксессуары к клеммам WAGO: пружинные зажимы для экрана</h3>
-						<p><a href="new.html" title="">Новое поколение пружинных зажимов делают использование разработанной WAGO ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-28</time>
-						<h3 class="news__title">Проведи «Яркие каникулы co Schneider Electric»!</h3>
-						<p><a href="new.html" title="">Schneider Electric вновь приглашает дизайнеров интерьера воплотить свои уникальные идеи в ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-25</time>
-						<h3 class="news__title">Изолента от Schneider Electric: гид по продукту </h3>
-						<p><a href="new.html" title="">Современная электроизоляционная лента или изолента из поливинилхлорида (ПВХ) ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-23</time>
-						<h3 class="news__title">Группа Legrand примет участие в ЭКСПО 1520</h3>
-						<p><a href="new.html" title="">Группа Legrand совместно со своим партнером – ГК «Спектр» – примет участие в VI Международном ...</a></p>
-					</div>
-				</div>
-				<div class="news">
-					<div class="news__item">
-						<time class="date">2017-08-21</time>
-						<h3 class="news__title">АББ выводит концепцию «умного» дома на новый уровень благодаря решениям Amazon и Sonos</h3>
-						<p><a href="new.html" title="">Сегодня в ходе IFA, крупнейшей в Европе выставки потребительской электроники, которая ...</a></p>
-					</div>
-				</div>
-
-			</div>
-		</div>
 
 
 		<!-- =pagination -->
-		<div class="pagination">
-			<a href="#">1</a>
-			<span class="current">2</span>
-			<a href="#">3</a>
-			<a href="#">4</a>
-			<a href="#">5</a>
+		<div class="navnews">
+			<a href="#" class="prev">предыдущая новость</a> - <a href="#" class="next">следующая новость</a>
 		</div>
-		<!-- =/pagination -->
+		<!-- =pagination -->
 
 <!-- InstanceEndEditable -->			
 	</div>
