--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 	<li><a href="articles.html" target="_blank">Статьи</a></li>
 	<li><a href="article.html" target="_blank">Статья</a></li>
 	<li><a href="news.html" target="_blank">Новости</a></li>
+	<li><a href="new.html" target="_blank">Новость</a></li>
 </ol>
 
 </body>
