--- a/app/faq.html
+++ b/app/faq.html
@@ -117,10 +117,10 @@
 			<p>Достаточно часто у домовладельцев, которые не являются профессиональными электриками, возникают вопросы, касающиеся использования такого энергоресурса как электричество. Вот и вынуждены они искать ответы на вопросы по электрике в самых разнообразных источниках, успешно функционирующих во всемирной сети Интернет. Но, невзирая на большое разнообразие строительно-информационных ресурсов и ресурсов, посвященных сугубо электротехнике, очень часто поиски ответов заканчиваются неудачей. Мной было принято решение восполнить по мере сил данный пробел и подготовить материал,  в котором собрать все наиболее часто задаваемые вопросы по электрике и дать на них максимально исчерпывающие ответы. Итак, приступим непосредственно к вопросам и ответам по электрике.</p>
 		</main>
 
-		<div id="accordion" class="card accordion" data-children=".item">
-			<div class="item">
+		<section id="accordion" class="card accordion" data-children=".item">
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion1" aria-expanded="true" aria-controls="accordion1">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion1" aria-expanded="true" aria-controls="accordion1" role="button">
 						<span>Что лучше внутренняя или внешняя проводка?</span>
 					</a>
 				</h4>
@@ -129,10 +129,10 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
+			</article>
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion2" aria-expanded="false" aria-controls="accordion2" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion2" aria-expanded="false" aria-controls="accordion2" class="collapsed" role="button">
 						<span>Какой провод лучше медный или алюминиевый?</span>
 					</a>
 				</h4>
@@ -141,10 +141,10 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
+			</article>
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion3" aria-expanded="false" aria-controls="accordion3" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion3" aria-expanded="false" aria-controls="accordion3" class="collapsed" role="button">
 						<span>Можно ли соединять медь с алюминием?</span>
 					</a>
 				</h4>
@@ -153,11 +153,11 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
+			</article>
 
-			<div class="item">
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion4" aria-expanded="false" aria-controls="accordion4" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion4" aria-expanded="false" aria-controls="accordion4" class="collapsed" role="button">
 						<span>Крепление провода в штробе - как закрепляют провод и нужно ли это вообще?</span>
 					</a>
 				</h4>
@@ -166,10 +166,10 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
+			</article>
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion5" aria-expanded="false" aria-controls="accordion5" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion5" aria-expanded="false" aria-controls="accordion5" class="collapsed" role="button">
 						<span>Глубина укладки кабеля в землю - какая она должна быть?</span>
 					</a>
 				</h4>
@@ -178,11 +178,11 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
+			</article>
 
-			<div class="item">
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion6" aria-expanded="false" aria-controls="accordion6" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion6" aria-expanded="false" aria-controls="accordion6" class="collapsed" role="button">
 						<span>Нужно ли ставить УЗО для защиты электропроводки?</span>
 					</a>
 				</h4>
@@ -191,10 +191,10 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
+			</article>
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion7" aria-expanded="false" aria-controls="accordion7" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion7" aria-expanded="false" aria-controls="accordion7" class="collapsed" role="button">
 						<span>Какая розетка лучше керамическая или пластиковая?</span>
 					</a>
 				</h4>
@@ -203,11 +203,11 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>	
+			</article>	
 
-			<div class="item">
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion8" aria-expanded="false" aria-controls="accordion8" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion8" aria-expanded="false" aria-controls="accordion8" class="collapsed" role="button">
 						<span>Можно ли ставить розетку в ванной?</span>
 					</a>
 				</h4>
@@ -216,10 +216,10 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
+			</article>
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion9" aria-expanded="false" aria-controls="accordion9" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion9" aria-expanded="false" aria-controls="accordion9" class="collapsed" role="button">
 						<span>Цвет проводов фаза ноль земля, какая маркировка существует?</span>
 					</a>
 				</h4>
@@ -228,10 +228,10 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>
-			<div class="item">
+			</article>
+			<article class="item">
 				<h4 class="accordion__title">
-					<a data-toggle="collapse" data-parent="#accordion" href="#accordion10" aria-expanded="false" aria-controls="accordion10" class="collapsed">
+					<a data-toggle="collapse" data-parent="#accordion" href="#accordion10" aria-expanded="false" aria-controls="accordion10" class="collapsed" role="button">
 						<span>Как правильно соединить телефонный провод?</span>
 					</a>
 				</h4>
@@ -240,8 +240,8 @@
 						<p>Как можно догадаться, речь идет о внутренней проводке, которая подразумевает скрытие электрических проводов в штробах с последующим их заштукатуриванием. Нужно ли закреплять провод в штробе? В принципе, можно обойтись и без закрепления, ведь провод и так будет надежно закреплен в стене за счет штукатурной смеси, хотя в некоторых случаях провод все-таки закрепляют в штробе для большей удобности последующего заштукатуривания (другими словами, чтобы провод не вылезал и не мешал заделке штробы). Что касается закрепления, то этот процесс осуществляется при помощи специальных хомутов или так называемых «клипсов».</p>
 					</div>
 				</div>
-			</div>	
-		</div>
+			</article>	
+		</section>
 
 		<div class="line"></div>
 
