--- a/app/service.html
+++ b/app/service.html
@@ -262,33 +262,33 @@
 				<p class="title">Отзывы наших клиентов</p>
 			</header>
 			<div class="reviews__carousel owl-carousel" id="foo3">
-				<div class="reviews__item">
-					<div class="reviews__top">Алексей, Королев, 18.06.2017</div>
-					<div class="reviews__question">
+				<article class="reviews__item">
+					<h3 class="reviews__top">Алексей, Королев, 18.06.2017</h3>
+					<div class="reviews__text">
 						<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
 					</div>
 					<div class="reviews__answer">
 						<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
 					</div>
-				</div>
-				<div class="reviews__item">
-					<div class="reviews__top">Алексей, Королев, 18.06.2017</div>
-					<div class="reviews__question">
+				</article>
+				<article class="reviews__item">
+					<h3 class="reviews__top">Алексей, Королев, 18.06.2017</h3>
+					<div class="reviews__text">
 						<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
 					</div>
 					<div class="reviews__answer">
 						<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
 					</div>
-				</div>
-				<div class="reviews__item">
-					<div class="reviews__top">Алексей, Королев, 18.06.2017</div>
-					<div class="reviews__question">
+				</article>
+				<article class="reviews__item">
+					<h3 class="reviews__top">Алексей, Королев, 18.06.2017</h3>
+					<div class="reviews__text">
 						<p>Здравствуйте. Вы делали нам электромонтажные работы в Королеве на ул. Пионерской. Все хорошо, нам все нравится. Наш штукатур, который пришел после вас шпатлевать стены, он просто прибалдел от вашей работы. Он сказал: "электрика вся скрытая, а все равно делают все ровненько, как по линеечке, все равно ж вся красота закроется". Но есть один момент: не горит временная лампочка Ильича на кухне. Прошу вас починить. Потому что, вдруг дело не в лампочке, а в проводке, которая идет на нее. Сейчас закроем полы и потолки, и починить будет уже невозможно. С уважением, Алексей.</p>
 					</div>
 					<div class="reviews__answer">
 						<p>Мы делали монтаж электрики в Королеве у Алексея. И похоже, ребята не дотянули зажим на клеммнике в патроне. Алексей, как вы видите, мы вас не бросили, сразу приехали, косяк поправили. Теперь все работает. Письмо Алексея мы получили по почте 18 июня. А 19 июня мы исправили нашу недоработку.</p>
 					</div>
-				</div>
+				</article>
 			</div>
 		</section>
 		<!-- =/reviews -->
