--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
 	<li><a href="article.html" target="_blank">Статья</a></li>
 	<li><a href="news.html" target="_blank">Новости</a></li>
 	<li><a href="new.html" target="_blank">Новость</a></li>
+	<li><a href="faq.html" target="_blank">FAQ</a></li>
 </ol>
 
 </body>
