--- a/app/homepage.html
+++ b/app/homepage.html
@@ -683,7 +683,7 @@
 <script>window.jQuery || document.write('<script src="template/js/jquery.validate.min.js"><\/script>')</script>
 <script src="/template/js/engine.js"></script>
 
-<script src="https://api-maps.yandex.ru/2.1.26/?lang=ru_UA"></script>
+<script src="https://api-maps.yandex.ru/2.1.26/?lang=ru_RU"></script>
 <script>
 var map;
 var myCollection;	
