--- a/app/service.html
+++ b/app/service.html
@@ -293,7 +293,7 @@
 		</section>
 		<!-- =/reviews -->
 
-		<a href="#" class="btn" role="button"><span>ЗАКАЗАТЬ ЭЛЕКТРОМОНТАЖНЫЕ РАБОТЫ</span></a>
+		<a href="#" class="btn" role="button" data-toggle="modal" data-target="#writeus"><span>ЗАКАЗАТЬ ЭЛЕКТРОМОНТАЖНЫЕ РАБОТЫ</span></a>
 
 
 		<!-- =listlinks -->
