--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,8 @@
 	<li><a href="news.html" target="_blank">Новости</a></li>
 	<li><a href="new.html" target="_blank">Новость</a></li>
 	<li><a href="faq.html" target="_blank">FAQ</a></li>
+	<li><a href="reviws.html" target="_blank">Отзывы</a></li>
+	<li><a href="404.html" target="_blank">404</a></li>
 </ol>
 
 </body>
